projects/giri-test-labels/clusternetworkpolicies/pol2.yaml
apiVersion: security.k8smgmt.io/v3
kind: ClusterNetworkPolicy
metadata:
  name: pol2
  project: giri-test-labels
spec:
  rules:
  - name: rule2
    version: v1
  version: v1
